--- a/assets/scss/elements/_calendar.scss
+++ b/assets/scss/elements/_calendar.scss
@@ -166,7 +166,7 @@ $modal-margin: 3rem;
       .modal-header {
         padding: $modal-margin;
         padding-bottom: 0.25rem;
-        padding-top: 2.5rem;
+        // padding-top: 2.5rem;
         border: none;
         .modal-title {
           font-family: "Inter";
@@ -175,7 +175,7 @@ $modal-margin: 3rem;
           font-size: 24px;
           letter-spacing: 0.1px;
           line-height: 128%;
-          width: 92%;
+          width: 75%;
           padding-bottom: .55rem;
         }
         .close-button-wrapper {
@@ -286,7 +286,7 @@ $outline-color: #e6e6e6;
     gap: 10px;
     position: relative;
     .event-list-item {
-      padding: 2.75rem 2.5rem 3rem 2.5rem;
+      padding: 2.75rem 2.25rem 3rem 2.25rem;
       border-radius: 10px;
       background-color: white;
       border: 1px solid $outline-color;
@@ -434,9 +434,8 @@ $outline-color: #e6e6e6;
     }
   }
   .all-events-link {
-    display: block;
-    text-align: right;
-    padding-left: 0.5rem;
+    display: inline-block;
+    padding-left: 0.75rem;
     padding-top: 0.75rem;
     padding-right: 1rem;
     font-family: "Sono";
