--- a/assets/scss/elements/_banner.scss
+++ b/assets/scss/elements/_banner.scss
@@ -402,10 +402,33 @@
   @media #{$sm-layout} {
     height: 600px !important;
     .cornered-container {
-      margin-bottom: 3.25rem;
+      margin-bottom: 2.25rem;
       .cornered-box {
-        padding: 2.5rem;
-        font-size: 17px;
+        padding: 1.5rem;
+        text-align: justify;
+        font-size: 15px;
+        // corners ruleset
+        --b: 1px; /* thickness of the border */
+        --c: rgb(255, 255, 255); /* color of the border */
+        --w: 10px; /* length of the lines in the corner */
+        border: var(--b) solid #0000; /* space for the border */
+        --_g: #0000 90deg, var(--c) 0;
+        --_p: var(--w) var(--w) border-box no-repeat;
+
+        background: conic-gradient(
+              from 90deg at top var(--b) left var(--b),
+              var(--_g)
+            )
+            0 0 / var(--_p),
+          conic-gradient(from 180deg at top var(--b) right var(--b), var(--_g))
+            100% 0 / var(--_p),
+          conic-gradient(from 0deg at bottom var(--b) left var(--b), var(--_g))
+            0 100% / var(--_p),
+          conic-gradient(
+              from -90deg at bottom var(--b) right var(--b),
+              var(--_g)
+            )
+            100% 100% / var(--_p);
       }
     }
 
