--- a/assets/scss/elements/_calendar.scss
+++ b/assets/scss/elements/_calendar.scss
@@ -250,7 +250,7 @@ $modal-margin: 3rem;
           height: 35px;
           border-radius: 1px;
           background-color: var(--color-secondary);
-          padding-bottom: 6px;
+          padding-bottom: 5px;
           transition: all 0.25s ease;
           border: none;
           &:hover {
@@ -447,6 +447,91 @@ $outline-color: #e6e6e6;
     opacity: 0.6;
     &:hover {
       opacity: 1;
+    }
+  }
+}
+
+
+//~ =============================
+//~ ====== PHABLET STYLING ======
+//~ =============================
+
+@media screen and (max-width: 768px) {
+  section {
+    &.hours-table {
+      padding-top: 16rem;
+      padding-bottom: 10rem;
+      .container {
+        .row {
+          [class*='col'] {
+            .events-list-container {
+              .events-list-heading {
+                font-size: 37px;
+                text-align: center;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  section {
+    &.calendar-section {
+      padding-top: 11rem;
+      padding-bottom: 7rem;
+      .container {
+        #calendar {
+          .fc-header-toolbar {
+            position: relative;
+            margin-bottom: 0.9rem;
+            .fc-toolbar-chunk:nth-of-type(2) {
+              position: absolute;
+              width: 100%;
+              left: 0;
+              top: -4rem;
+              h2 {
+                @include center-it;
+                width: 100%;
+                text-align: center;
+                font-size: 32px;
+              }
+            }
+            .fc-toolbar-chunk {
+              .fc-button-group {
+                .fc-prev-button,
+                .fc-next-button {
+                  .fc-icon {
+                    position: relative;
+                    top: -.75px;
+                  }
+                }
+              }
+            }
+          }
+          .fc-view-harness {
+            .custom-view {
+              .no-events-message {
+                width: 100%;
+                justify-content: center;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .events-list-wrapper {
+    .event-list-item {
+      .event-list-title {
+
+      }
+      .event-list-date-wrapper {
+        font-size: 15px;
+      }
+      .event-list-description {
+        font-size: 15px;
+        line-height: 150%;
+      }
     }
   }
 }
